DataReader数据读取器

--- a/项目四 使用ADO.NET实现数据访问/SQLServerDemo/SQLServerDemo/SQLServerDemo.csproj
+++ b/项目四 使用ADO.NET实现数据访问/SQLServerDemo/SQLServerDemo/SQLServerDemo.csproj
@@ -69,6 +69,7 @@
     <Content Include="4_2.aspx" />
     <Content Include="4_3.aspx" />
     <Content Include="4_4.aspx" />
+    <Content Include="4_5.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +100,13 @@
     </Compile>
     <Compile Include="4_4.aspx.designer.cs">
       <DependentUpon>4_4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="4_5.aspx.cs">
+      <DependentUpon>4_5.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="4_5.aspx.designer.cs">
+      <DependentUpon>4_5.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
