--- a/项目四 使用ADO.NET实现数据访问/SQLServerDemo/SQLServerDemo/bin/SQLServerDemo.dll.config
+++ b/项目四 使用ADO.NET实现数据访问/SQLServerDemo/SQLServerDemo/bin/SQLServerDemo.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="smdb" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\王鹏\Desktop\ASP.NET\DataBase\SMDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient"/>
+    <add name="smdb" connectionString="Data Source=506_23;Initial Catalog=SMDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
